--- a/BadHunter/Base.lproj/Main.storyboard
+++ b/BadHunter/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rS3-R9-Ivy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rS3-R9-Ivy">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Master-->
@@ -22,7 +23,7 @@
         <!--Master-->
         <scene sceneID="VgW-fR-Quf">
             <objects>
-                <tableViewController title="Master" id="pGg-6v-bdr" customClass="MasterViewController" customModuleProvider="" sceneMemberID="viewController">
+                <tableViewController title="Master" id="pGg-6v-bdr" customClass="MasterViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="mLL-gJ-YKr">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -65,7 +66,7 @@
         <!--Detail-->
         <scene sceneID="Cn3-H9-jdl">
             <objects>
-                <viewController title="Detail" id="Ah7-4n-0Wa" customClass="DetailViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController title="Detail" id="Ah7-4n-0Wa" customClass="DetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cIm-e0-J51"/>
                         <viewControllerLayoutGuide type="bottom" id="a0L-h9-sNL"/>
@@ -74,24 +75,86 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Detail view content goes here" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Lei-5M-9Gs">
-                                <rect key="frame" x="20" y="292" width="560" height="17"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" size="system"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Appraisal" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ath-1r-OEq">
+                                <rect key="frame" x="262" y="110" width="75" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Motivation" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6U-49-FGH">
+                                <rect key="frame" x="36" y="215" width="80.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Destruction Power" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IPx-vN-C1l">
+                                <rect key="frame" x="36" y="150" width="142" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DPLevel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iA7-Vl-HjU">
+                                <rect key="frame" x="138" y="183" width="63.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="DcC-tV-tVu">
+                                <rect key="frame" x="36" y="178" width="94" height="29"/>
+                            </stepper>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="fUs-iK-8pB">
+                                <rect key="frame" x="36" y="243" width="94" height="29"/>
+                            </stepper>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Baddie name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d8T-t2-Ohn">
+                                <rect key="frame" x="36" y="72" width="528" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Motivation" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8y3-LT-Lly">
+                                <rect key="frame" x="138" y="248" width="80.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="20" symbolic="YES" id="62x-JV-TTJ"/>
-                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="centerY" secondItem="MMQ-IT-qOo" secondAttribute="centerY" id="JzS-HC-Rnl"/>
-                            <constraint firstAttribute="trailing" secondItem="Lei-5M-9Gs" secondAttribute="trailing" constant="20" symbolic="YES" id="pXB-RP-Zz6"/>
+                            <constraint firstItem="fUs-iK-8pB" firstAttribute="top" secondItem="e6U-49-FGH" secondAttribute="bottom" constant="8" id="AwW-YA-sXw"/>
+                            <constraint firstItem="d8T-t2-Ohn" firstAttribute="centerX" secondItem="Ath-1r-OEq" secondAttribute="centerX" id="BqY-rC-feE"/>
+                            <constraint firstItem="e6U-49-FGH" firstAttribute="top" secondItem="DcC-tV-tVu" secondAttribute="bottom" constant="8" id="CWg-f5-6ja"/>
+                            <constraint firstItem="DcC-tV-tVu" firstAttribute="top" secondItem="IPx-vN-C1l" secondAttribute="bottom" constant="7.5" id="Il5-EG-UCc"/>
+                            <constraint firstItem="8y3-LT-Lly" firstAttribute="leading" secondItem="fUs-iK-8pB" secondAttribute="trailing" constant="8" id="Ilh-Zg-0DZ"/>
+                            <constraint firstItem="DcC-tV-tVu" firstAttribute="centerY" secondItem="iA7-Vl-HjU" secondAttribute="centerY" id="MRp-YG-oR9"/>
+                            <constraint firstItem="IPx-vN-C1l" firstAttribute="leading" secondItem="d8T-t2-Ohn" secondAttribute="leading" id="Mei-r0-UTe"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="IPx-vN-C1l" secondAttribute="trailing" constant="20" id="REN-Vl-igM"/>
+                            <constraint firstItem="d8T-t2-Ohn" firstAttribute="top" secondItem="cIm-e0-J51" secondAttribute="bottom" constant="8" id="RPX-aG-qkn"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="iA7-Vl-HjU" secondAttribute="trailing" constant="20" id="SSN-T5-Iyq"/>
+                            <constraint firstItem="e6U-49-FGH" firstAttribute="leading" secondItem="DcC-tV-tVu" secondAttribute="leading" id="TYf-C1-0N7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="d8T-t2-Ohn" secondAttribute="trailing" constant="20" id="WfY-ld-NOj"/>
+                            <constraint firstItem="e6U-49-FGH" firstAttribute="leading" secondItem="fUs-iK-8pB" secondAttribute="leading" id="ZKS-UM-o7m"/>
+                            <constraint firstItem="d8T-t2-Ohn" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leadingMargin" constant="20" id="ZLo-0V-HXz"/>
+                            <constraint firstItem="Ath-1r-OEq" firstAttribute="top" secondItem="d8T-t2-Ohn" secondAttribute="bottom" constant="8" id="eMb-7A-Qjv"/>
+                            <constraint firstItem="IPx-vN-C1l" firstAttribute="leading" secondItem="DcC-tV-tVu" secondAttribute="leading" id="gIl-1T-EB6"/>
+                            <constraint firstItem="IPx-vN-C1l" firstAttribute="top" secondItem="Ath-1r-OEq" secondAttribute="bottom" constant="20" id="h9n-cr-etD"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="8y3-LT-Lly" secondAttribute="trailing" constant="20" id="kuX-ig-xFF"/>
+                            <constraint firstItem="8y3-LT-Lly" firstAttribute="centerY" secondItem="fUs-iK-8pB" secondAttribute="centerY" id="tgU-xJ-7WN"/>
+                            <constraint firstItem="iA7-Vl-HjU" firstAttribute="leading" secondItem="DcC-tV-tVu" secondAttribute="trailing" constant="8" id="wFN-aJ-ZXU"/>
+                            <constraint firstItem="d8T-t2-Ohn" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leadingMargin" constant="34" id="waX-8u-Kkv"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="waX-8u-Kkv"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="Detail" id="cra-N8-TIN"/>
+                    <navigationItem key="navigationItem" title="Bad guy" id="cra-N8-TIN"/>
                     <connections>
-                        <outlet property="detailDescriptionLabel" destination="Lei-5M-9Gs" id="sCT-F7-F6f"/>
+                        <outlet property="appraisalLabel" destination="Ath-1r-OEq" id="70O-BI-9l4"/>
+                        <outlet property="destructionPowerLabel" destination="iA7-Vl-HjU" id="djl-8m-byZ"/>
+                        <outlet property="destructionPowerStepper" destination="DcC-tV-tVu" id="YyZ-Wk-Mf3"/>
+                        <outlet property="motivationLabel" destination="8y3-LT-Lly" id="oQS-Yq-EdZ"/>
+                        <outlet property="motivationStepper" destination="fUs-iK-8pB" id="HK1-hM-R1y"/>
+                        <outlet property="nameTextField" destination="d8T-t2-Ohn" id="EwU-mi-vFf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrm-kH-fPn" sceneMemberID="firstResponder"/>
